fix: Align border radius with kids mode

--- a/assets/src/scss/frontend/kids/_learning-area.scss
+++ b/assets/src/scss/frontend/kids/_learning-area.scss
@@ -187,6 +187,10 @@
     border-radius: $tutor-radius-4xl;
   }
 
+  .tutor-finish-course-progress {
+    border-radius: $tutor-radius-3xl;
+  }
+
   .tutor-average-rating,
   .tutor-certificate-icon {
     border-radius: $tutor-radius-2xl;
